# rust-k8s-operator

./: .gitignore  Cargo.toml  README.md
k8s/: echo-example.yaml  echoes.example.com.yaml
src/: echo.rs  finalizer.rs  main.rs
